Fix Examples header styling on smaller viewports.

--- a/styles.scss
+++ b/styles.scss
@@ -406,7 +406,7 @@ blockquote {
 
 .Simulator {
   @media screen and (max-width: $viewport-sm) {
-    margin-top: 160px;
+    margin-top: 170px;
 
     >h1 {
       display: none;
